Added Curated-Chef Componet

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --color-primary-light: #3d7f7c;
   --color-primary-dark: #1d4f4d;
   --color-secondary: #ff8c42;
+  --color-third:#c53634;
   --color-secondary-light: #ffa662;
   --color-secondary-dark: #e67a35;
   --color-accent: #ffd89b;
